--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,2 @@
-FILE(GLOB_RECURSE TESTS CONFIGURE_DEPENDS "*.cpp")
-
-FOREACH(TEST_FILE ${TESTS})
-  FILE(RELATIVE_PATH TEST_FILE_REL ${CMAKE_SOURCE_DIR}/tests ${TEST_FILE})
-  STRING(REPLACE ".cpp" "" TEST_NAME ${TEST_FILE_REL})
-  ADD_EXECUTABLE(${TEST_NAME} ${TEST_FILE})
-  TARGET_LINK_LIBRARIES(${TEST_NAME} thin)
-  ADD_TEST(${TEST_NAME} ${TEST_NAME})
-ENDFOREACH()
+ADD_SUBDIRECTORY(algo)
+ADD_SUBDIRECTORY(thin)
