--- a/.github/workflows/yaml_format.yml
+++ b/.github/workflows/yaml_format.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-node@master
         with:
-          node-version: '10.x'
+          node-version: "10.x"
       - name: Install prettier
         run: sudo npm install --global prettier
       - name: Run prettier
